--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,4 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+html {
+    background-color: #111;
+    font-size: 1.6rem;
+}
